# ruamelfmt

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-question.yml  03-feature-request.yml  config.yml
.github/workflows/: test.yml
src/ruamelfmt/: __init__.py  __main__.py
tests/system/: test_import.py
